# rust-ray

./: Cargo.toml  README.md  output.ppm  untitled.mtl
src/: camera.rs  hitable.rs  lib.rs  main.rs  material.rs  ray.rs  vec3.rs
src/material/: mod.rs
src/objects/: mod.rs  sphere.rs  triangle.rs
src/util/: camera.rs  mod.rs  ray.rs  sample.rs  scenes.rs  vec3.rs
