[package]
name = "rust-ray"
version = "0.1.0"
authors = ["jackyarndley <34801340+jackyarndley@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
rayon = "1.3.0"
image = "0.22.3"